# wse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml  wheels.yml
benchmarks/: bench_battle_server.py  bench_brutal.py  bench_fanout_server.py  bench_server.py  bench_wse.py  bench_wse_multiprocess.py
benchmarks/rust-bench/: Cargo.toml
benchmarks/rust-bench/src/: config.rs  jwt.rs  main.rs  preflight.rs  protocol.rs  report.rs  stats.rs
benchmarks/rust-bench/src/tests/: battle_caps.rs  battle_cluster.rs  battle_compression.rs  battle_discovery.rs  battle_drain.rs  battle_encryption.rs  battle_load.rs  battle_metrics.rs  battle_phase3_caps.rs  battle_phase4_tls.rs  battle_phase5_discovery.rs  battle_phase6_compression.rs  battle_presence.rs  battle_queue_groups.rs  battle_recovery.rs  battle_standalone.rs  battle_tls.rs  battle_topic_acl.rs  battle_topology.rs  connection_limit.rs  connection_storm.rs  fanout_broadcast.rs  fanout_cluster.rs  fanout_cluster_tls.rs  fanout_multi.rs  fanout_pubsub.rs  format_comparison.rs  mod.rs  ping_latency.rs  size_matrix.rs  sustained_hold.rs  throughput.rs
benchmarks/ts-bench/: package-lock.json  package.json  tsconfig.json
benchmarks/ts-bench/src/: config.ts  jwt.ts  main.ts  preflight.ts  protocol.ts  report.ts  stats.ts
benchmarks/ts-bench/src/tests/: connection-limit.ts  connection-storm.ts  format-comparison.ts  index.ts  ping-latency.ts  size-matrix.ts  sustained-hold.ts  throughput.ts
client/: README.md  constants.ts  index.ts  types.ts
client/examples/: IoTHandlers.ts
client/handlers/: EventHandlers.ts  index.ts
client/hooks/: useWSE.ts
client/protocols/: compression.ts  transformer.ts
client/services/: AdaptiveQualityManager.ts  ConnectionManager.ts  ConnectionPool.ts  EventSequencer.ts  MessageProcessor.ts  NetworkMonitor.ts  OfflineQueue.ts  RateLimiter.ts
client/stores/: useMessageQueueStore.ts  useWSEStore.ts
client/utils/: circuitBreaker.ts  logger.ts  security.ts
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_FANOUT.md  BENCHMARKS_PYTHON_CLIENT.md  BENCHMARKS_RUST_CLIENT.md  BENCHMARKS_TS_CLIENT.md  CLUSTER_PROTOCOL.md  DEPLOYMENT.md  INTEGRATION.md  MIGRATION.md  PROTOCOL.md  REDIS_PUBSUB.md  RUST_UTILITIES.md  SECURITY.md  hn_post.md  reddit_post.md
examples/: client_python.py  client_react.tsx  router_basic.py  standalone_basic.py  standalone_broadcast.py  standalone_cluster.py  standalone_presence.py  standalone_recovery.py  standalone_redis.py
python-client/: README.md  pyproject.toml
python-client/tests/: conftest.py  test_circuit_breaker.py  test_client.py  test_compression.py  test_connection.py  test_connection_pool.py  test_event_sequencer.py  test_network_monitor.py  test_protocol.py  test_rate_limiter.py  test_security.py  test_sync_client.py
python-client/wse_client/: __init__.py  _logging.py  circuit_breaker.py  client.py  compression.py  connection.py  connection_pool.py  constants.py  errors.py  event_sequencer.py  msgpack_handler.py  network_monitor.py  offline_queue.py  protocol.py  rate_limiter.py  security.py  sync_client.py  types.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: jwt.rs  lib.rs
rust/src/wse/: cluster.rs  compression.rs  filters.rs  mod.rs  presence.rs  queue.rs  rate_limiter.rs  recovery.rs  redis_pubsub.rs  reliability.rs  security.rs  sequencer.rs  server.rs  transformer.rs
server/: __init__.py  _accel.py  dependencies.py  router.py
server/connection/: compression.py  connection.py  handlers.py  manager.py  queue.py  security.py  sequencer.py  transformer.py
server/core/: filters.py  pubsub.py  types.py
server/examples/: auth_handler.py  event_mappings.py  publisher.py  snapshot_service.py
server/metrics/: connection_metrics.py
server/reliability/: circuit_breaker.py  config.py  rate_limiter.py
tests/: conftest.py  test_compression.py  test_filters.py  test_integration.py  test_queue.py  test_reliability.py  test_router.py  test_security.py  test_sequencer.py  test_transformer.py  test_types.py
tests/keys/: ec2_private.pem  ec2_public.pem  ec_private.pem  ec_public.pem  rsa2_private.pem  rsa2_public.pem  rsa_private.pem  rsa_public.pem
ts-client/: README.md  constants.ts  index.ts  types.ts
ts-client/examples/: ChatHandlers.ts
ts-client/handlers/: EventHandlers.ts
ts-client/hooks/: useWSE.ts
ts-client/protocols/: compression.ts  transformer.ts
ts-client/services/: AdaptiveQualityManager.ts  ConnectionManager.ts  ConnectionPool.ts  EventSequencer.test.ts  EventSequencer.ts  MessageProcessor.ts  NetworkMonitor.ts
ts-client/stores/: useMessageQueueStore.ts  useWSEStore.ts
ts-client/utils/: circuitBreaker.ts  logger.ts  security.ts
wse_server/: __init__.py  _accel.py  _wse_accel.pyi  dependencies.py  router.py
wse_server/connection/: compression.py  connection.py  handlers.py  manager.py  queue.py  security.py  sequencer.py  transformer.py
wse_server/core/: filters.py  pubsub.py  types.py
wse_server/examples/: auth_handler.py  snapshot_service.py
wse_server/metrics/: connection_metrics.py
wse_server/reliability/: circuit_breaker.py  config.py  rate_limiter.py
