[package]
name = "wse-accel"
version = "1.2.0"
edition = "2024"

[lib]
name = "_wse_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py312"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
rmp-serde = "1.3.1"
rmpv = "1.3.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4"
ahash = "0.8.12"
dashmap = "6"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh", "jwk"] }
hkdf = "0.12"
uuid = { version = "1.21.0", features = ["v7"] }
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"

[profile.release]
lto = true
codegen-units = 1
strip = true
