[package]
name = "wse-accel"
version = "2.0.6"
edition = "2024"

[lib]
name = "_wse_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py312"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
rmp-serde = "1.3.1"
rmpv = "1.3.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4"
ahash = "0.8.12"
dashmap = "6"
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh", "jwk"] }
hkdf = "0.12"
uuid = { version = "1.21.0", features = ["v7"] }
base64 = "0.22"
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
crossbeam-channel = "0.5"
tokio-util = { version = "0.7", features = ["rt"] }
socket2 = { version = "0.6", features = ["all"] }
bytes = "1"
mimalloc = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = true }
rustls-pki-types = "1"
zstd = "0.13"

[dev-dependencies]
rcgen = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
