[package]
name = "wse-bench"
version = "0.1.0"
edition = "2021"
description = "WSE server stress-test and benchmark suite"

[[bin]]
name = "wse-bench"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hdrhistogram = "7"
chrono = "0.4"
flate2 = "1"
rmp-serde = "1"
rand = "0.8"
http = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
